Add char * version of ReadFrames, for compatibility with some R5 games. Patch by genki0. I didn't see any reason not to commit it, so... This should fix #897.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@25656 a95241bf-73f2-0310-859d-f6bbb57e9c96